# yalp

./: .gitignore  README.md  pyproject.toml
yalp/: __init__.py  __main__.py  config.py  proxy.py
yalp/modules/: reasoning_renamer.py
